Draws werden noch nicht eingetragen. Es fehlen noch Übersetzungen und aus irgendeinem Grund kann man nur 1 Runde spielen. Aber ansonsten kann man jetzt auch PvP spielen. Das Spiel ist jetzt in mehrere Klassen verteilt.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,15 @@
     <string name="mainMenu">Main menu</string>
     <string name="playerStats">Playerstatistics</string>
     <string name="elementsStats">Elementsstatistics</string>
+    <string name="paperVsRock">Paper covers Rock.</string>
+    <string name="scissorsVsRock">Rock crushes Scissors.</string>
+    <string name="scissorsVsPaper">Scissors cut paper.</string>
+    <string name="scissorsVsLizard">Scissors decapitates lizard.</string>
+    <string name="scissorsVsSpock">Spock smashes scissors.</string>
+    <string name="rockVsPaper">Paper covers rock.</string>
+    <string name="rockVsLizard">Rock crushes lizard.</string>
+    <string name="rockVsSpock">Spock vaporizes rock.</string>
+    <string name="paperVsLizard">Lizard eats paper.</string>
+    <string name="paperVsSpock">Paper disproves Spock.</string>
+    <string name="lizardVsSpock">Lizard poisons Spock.</string>
 </resources>
